Remove Java 10 support